[gd_scene load_steps=10 format=3 uid="uid://cg57uck1c3p3e"]

[ext_resource type="Script" path="res://soundtrack/soundtrack_manager.gd" id="1_02ed8"]
[ext_resource type="AudioStream" uid="uid://celpt01x72fxe" path="res://soundtrack/goblina_lootphase.mp3" id="1_a6af3"]
[ext_resource type="AudioStream" uid="uid://bvn20ioqft3tu" path="res://soundtrack/goblina_shopphase.mp3" id="2_ggsem"]
[ext_resource type="AudioStream" uid="uid://b5nwm1ycmopyu" path="res://soundtrack/endscreen_edit.mp3" id="4_a8rkd"]

[sub_resource type="Animation" id="Animation_58af8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AudioStreamShop:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_qro0g"]
resource_name = "from_loot"
length = 5.0
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AudoStreamMerge")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"stop"
}]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamShop")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0.0],
"method": &"play"
}]
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AudoStreamMerge:volume_db")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 5)
}

[sub_resource type="Animation" id="Animation_m22mj"]
resource_name = "from_shop"
length = 5.0
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AudioStreamShop")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"stop"
}]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudoStreamMerge")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0.0],
"method": &"play"
}]
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AudioStreamShop:volume_db")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(-23.2, -0.25, 0, 0.25, 0, -23.2, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 5)
}

[sub_resource type="Animation" id="Animation_eo7we"]
resource_name = "all_completed"
length = 2.0
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AudioStreamShop")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"stop"
}]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamShop:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 2)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ptc76"]
_data = {
"RESET": SubResource("Animation_58af8"),
"all_completed": SubResource("Animation_eo7we"),
"from_loot": SubResource("Animation_qro0g"),
"from_shop": SubResource("Animation_m22mj")
}

[node name="SoundtrackManager" type="Node" node_paths=PackedStringArray("transition", "track_merge", "track_shop")]
script = ExtResource("1_02ed8")
transition = NodePath("AnimationPlayer")
track_merge = NodePath("AudoStreamMerge")
track_shop = NodePath("AudioStreamShop")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ptc76")
}

[node name="AudoStreamMerge" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("1_a6af3")
autoplay = true

[node name="AudioStreamShop" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_ggsem")

[node name="AudioStreamEnd" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_a8rkd")
